cloudapi: get rid of localSave check in local target
The local target shouldn't require any specific configuration and should
just be available always.
